--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+}
+a{
+    color: #fff;
 }
 .css-mhc70k-MuiGrid-root>.MuiGrid-item {
     padding-left: 0 !important;
